# balkan-bench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPECIFICATION.md  index.html  package-lock.json  spec_claude.md  vercel.json
eval/: .dockerignore  .gcloudignore  Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
eval/configs/benchmarks/superglue/: benchmark.yaml
eval/configs/benchmarks/superglue/tasks/: ax_b.yaml  ax_g.yaml  axb.yaml  axg.yaml  boolq.yaml  cb.yaml  copa.yaml  multirc.yaml  rte.yaml  wsc.yaml
eval/configs/models/official/: bertic.yaml  crosloengual_bert.yaml  galton_v3_base.yaml  galton_v3_large.yaml  jerteh_355.yaml  mmbert.yaml  mmbert_small.yaml  tesla_xlm.yaml  xlm_r_bertic.yaml
eval/results/official/superglue-sr/bertic/boolq/: result.json
eval/results/official/superglue-sr/bertic/cb/: result.json
eval/results/official/superglue-sr/bertic/copa/: result.json
eval/results/official/superglue-sr/bertic/multirc/: result.json
eval/results/official/superglue-sr/bertic/rte/: result.json
eval/results/official/superglue-sr/bertic/wsc/: result.json
eval/results/official/superglue-sr/crosloengual_bert/boolq/: result.json
eval/results/official/superglue-sr/crosloengual_bert/cb/: result.json
eval/results/official/superglue-sr/crosloengual_bert/copa/: result.json
eval/results/official/superglue-sr/crosloengual_bert/multirc/: result.json
eval/results/official/superglue-sr/crosloengual_bert/rte/: result.json
eval/results/official/superglue-sr/crosloengual_bert/wsc/: result.json
eval/results/official/superglue-sr/jerteh_355/boolq/: result.json
eval/results/official/superglue-sr/jerteh_355/cb/: result.json
eval/results/official/superglue-sr/jerteh_355/copa/: result.json
eval/results/official/superglue-sr/jerteh_355/multirc/: result.json
eval/results/official/superglue-sr/jerteh_355/rte/: result.json
eval/results/official/superglue-sr/jerteh_355/wsc/: result.json
eval/results/official/superglue-sr/mmbert/boolq/: result.json
eval/results/official/superglue-sr/mmbert/cb/: result.json
eval/results/official/superglue-sr/mmbert/copa/: result.json
eval/results/official/superglue-sr/mmbert/multirc/: result.json
eval/results/official/superglue-sr/mmbert/rte/: result.json
eval/results/official/superglue-sr/mmbert/wsc/: result.json
eval/results/official/superglue-sr/mmbert_small/boolq/: result.json
eval/results/official/superglue-sr/mmbert_small/cb/: result.json
eval/results/official/superglue-sr/mmbert_small/copa/: result.json
eval/results/official/superglue-sr/mmbert_small/multirc/: result.json
eval/results/official/superglue-sr/mmbert_small/rte/: result.json
eval/results/official/superglue-sr/mmbert_small/wsc/: result.json
eval/results/official/superglue-sr/modernbertic_base/boolq/: result.json
eval/results/official/superglue-sr/modernbertic_base/cb/: result.json
eval/results/official/superglue-sr/modernbertic_base/copa/: result.json
eval/results/official/superglue-sr/modernbertic_base/multirc/: result.json
eval/results/official/superglue-sr/modernbertic_base/rte/: result.json
eval/results/official/superglue-sr/modernbertic_base/wsc/: result.json
eval/schemas/: benchmark_spec.json  dataset_manifest.json  leaderboard_export.json  model_spec.json  result_artifact.json  submission_metadata.json  task_spec.json  task_throughput.json
eval/scripts/: seed_launch_artifacts.py
eval/scripts/gcp/: cloudbuild.yaml  common.sh  launch_a100.sh  launch_batch.sh  launch_l4.sh  launch_vertex.sh
eval/src/balkanbench/: __init__.py  config.py  hp_search.py  provenance.py  seed.py
eval/src/balkanbench/cli/: __init__.py  _paths.py  eval.py  gcs.py  hp_search.py  leaderboard.py  listcmd.py  main.py  predict.py  publish.py  run.py  score.py  throughput.py  validate.py
eval/src/balkanbench/data/: __init__.py  card.py  manifest.py  normalize.py  publish.py  repo.py
eval/src/balkanbench/evaluation/: __init__.py  evaluator.py
eval/src/balkanbench/leaderboard/: __init__.py  export.py
eval/src/balkanbench/metrics/: __init__.py  _common.py  accuracy.py  f1.py  gender_parity.py  matthews.py
eval/src/balkanbench/models/: __init__.py  hf_encoder.py
eval/src/balkanbench/scoring/: __init__.py  artifact.py  score.py
eval/src/balkanbench/tasks/: __init__.py  base.py  classification.py  diagnostic.py  multiple_choice.py  multirc.py  wsc.py
eval/src/balkanbench/throughput/: __init__.py  measure.py  writer.py
eval/tests/fixtures/configs/benchmarks/: superglue_invalid_bad_version.yaml  superglue_valid.yaml
eval/tests/fixtures/configs/models/: bertic_invalid_bare_override_keys.yaml  bertic_invalid_no_hf_repo.yaml  bertic_valid.yaml
eval/tests/fixtures/configs/tasks/: boolq_invalid_missing_metrics.yaml  boolq_valid.yaml
eval/tests/fixtures/leaderboards/: superglue_sr_valid.json
eval/tests/fixtures/manifests/: superglue_sr_valid.json
eval/tests/fixtures/results/: bertic_boolq_sr_valid.json
eval/tests/fixtures/submissions/: example_valid.json
eval/tests/integration/: test_publish_e2e.py
eval/tests/unit/: test_artifact.py  test_cli_eval.py  test_cli_leaderboard.py  test_cli_list.py  test_cli_list_populated.py  test_cli_predict.py  test_cli_publish.py  test_cli_run.py  test_cli_skeleton.py  test_cli_throughput.py  test_cli_validate_config.py  test_cli_validate_edges.py  test_cli_validate_env.py  test_config_loader.py  test_config_loader_errors.py  test_data_card.py  test_data_manifest.py  test_data_normalize.py  test_data_publish.py  test_default_predict_fn.py  test_evaluator.py  test_evaluator_fixes.py  test_hf_encoder.py  test_hp_search.py  test_hp_search_overrides.py  test_leaderboard_export.py  test_metrics.py  test_provenance.py  test_schema_benchmark_spec.py  test_schema_dataset_manifest.py  test_schema_leaderboard_export.py  test_schema_model_spec.py  test_schema_result_artifact.py  test_schema_submission_metadata.py  test_schema_task_spec.py  test_scoring_score.py  test_seed.py  test_task_classification.py  test_task_diagnostic.py  test_task_multiple_choice.py  (+4 more)
frontend/: README.md  (+3 more)
(+147 files in other folders)
